niiku-docs/confluence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-server
  labels:
    app: confluence
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
        component: server
    spec:
      serviceAccount: confluence
      securityContext:
        fsGroup: 2002
      containers:
        - name: confluence
          image: "atlassian/confluence-server:7.1.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: synchrony
              containerPort: 8091
              protocol: TCP
#          livenessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 60
#            periodSeconds: 15
#            timeoutSeconds: 3
#          readinessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 30
#            periodSeconds: 15
#            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /var/atlassian/application-data/confluence
              name: data
            - mountPath: /opt/atlassian/confluence/work
              name: temp
            - mountPath: /opt/atlassian/confluence/temp
              name: temp
            - mountPath: /opt/atlassian/confluence/logs
              name: temp
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 2
              memory: 2.5Gi
        # - name: oauth-proxy
        #   image: openshift/oauth-proxy:latest
        #   imagePullPolicy: IfNotPresent
        #   ports:
        #     - containerPort: 8443
        #       name: https
        #   args:
        #     - --https-address=:8443
        #     - --provider=openshift
        #     - --openshift-service-account=confluence
        #     - --upstream=http://localhost:8090
        #     - --tls-cert=/etc/tls/private/tls.crt
        #     - --tls-key=/etc/tls/private/tls.key
        #     - --cookie-secret=SECRET
        #   volumeMounts:
        #     - mountPath: /etc/tls/private
        #       name: proxy-tls
        #   livenessProbe:
        #     tcpSocket:
        #       port: https
        #     initialDelaySeconds: 30
        #     periodSeconds: 15
        #     timeoutSeconds: 3
        #   readinessProbe:
        #     tcpSocket:
        #       port: https
        #     initialDelaySeconds: 15
        #     periodSeconds: 15
        #     timeoutSeconds: 3
        #   resources:
        #     requests:
        #       cpu: 25m
        #       memory:  24Mi
        #     limits:
        #       cpu: 50m
        #       memory: 64Mi
      volumes:
        # - name: proxy-tls
        #   secret:
        #     secretName: proxy-tls        
        - name: data
          persistentVolumeClaim:
            claimName: confluence-data
        - name: temp
          emptyDir: {}
