niiku-docs/postgresql-statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: postgresql
  labels:
    app: confluence
    component: postgresql
spec:
  serviceName: confluence-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      name: postgresql
      labels:
        app: confluence
        component: postgresql
    spec:
      securityContext:
        fsGroup: 1002300000
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:11.5.0
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 50m
              memory: 160Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsUser: 1002300000
          ports:
            - name: postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
              subPath:
      volumes:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "3Gi"
        storageClassName: "rook-ceph-block"
